--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "@maileryio/_____": "1.0.*"
+        "@maileryio/mailery-web": "1.0.*"
     },
     "license": "BSD-3-Clause"
 }
