--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,23 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "nyholm/psr7": "^1.2",
+        "psr/http-factory": "^1.0",
+        "yiisoft/aliases": "^3.0@dev",
+        "yiisoft/di": "^3.0@dev",
+        "yiisoft/factory": "^3.0@dev",
+        "yiisoft/http": "^1.0@dev",
+        "yiisoft/router": "^3.0@dev",
+        "yiisoft/router-fastroute": "^3.0@dev",
+        "yiisoft/view": "^3.0@dev",
+        "yiisoft/yii-web": "^3.0@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "hiqdev/composer-config-plugin": "^0.3.0",
         "phan/phan": "^2.4",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -42,6 +53,9 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
+        },
+        "config-plugin": {
+            "web": "config/web.php"
         }
     },
     "config": {
