--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
             "dev-master": "1.0.x-dev"
         },
         "config-plugin": {
+            "params": "config/params.php",
             "web": "config/web.php"
         }
     },
