--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         },
         "config-plugin": {
             "params": "config/params.php",
-            "backend": "config/backend.php"
+            "web": "config/web.php"
         }
     },
     "config": {
