--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4",
+        "foxy/foxy": "^1.0",
         "nyholm/psr7": "^1.2",
         "psr/http-factory": "^1.0",
         "yiisoft/aliases": "^3.0@dev",
@@ -60,6 +61,10 @@
         }
     },
     "config": {
+        "foxy": {
+            "enabled": true,
+            "manager": "yarn"
+        },
         "sort-packages": true
     }
 }
