--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "require": {
         "php": "^7.4",
         "foxy/foxy": "^1.0",
+        "maileryio/mailery-brand": "dev-master",
+        "maileryio/mailery-menu-navbar": "dev-master",
+        "maileryio/mailery-menu-sidebar": "dev-master",
         "nyholm/psr7": "^1.2",
         "psr/http-factory": "^1.0",
         "yiisoft/aliases": "^3.0@dev",
@@ -29,6 +32,7 @@
         "yiisoft/router": "^3.0@dev",
         "yiisoft/router-fastroute": "^3.0@dev",
         "yiisoft/view": "^3.0@dev",
+        "yiisoft/widget": "^3.0@dev",
         "yiisoft/yii-web": "^3.0@dev"
     },
     "require-dev": {
