--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": "^7.4",
         "foxy/foxy": "^1.0",
-        "maileryio/mailery-brand": "dev-master",
+        "maileryio/mailery-brand-contract": "dev-master",
         "maileryio/mailery-menu-navbar": "dev-master",
         "maileryio/mailery-menu-sidebar": "dev-master",
         "nyholm/psr7": "^1.2",
