--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,9 @@
         }
     },
     "config": {
+        "extra": {
+            "foxy": true
+        },
         "sort-packages": true
     }
 }
