--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "yiisoft/yii-web": "^3.0@dev"
     },
     "require-dev": {
+        "foxy/foxy": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "phan/phan": "^2.4",
         "phpunit/phpunit": "^9.0",
