--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "psr/http-factory": "^1.0",
         "yiisoft/aliases": "^1.0",
         "yiisoft/assets": "^1.0@dev",
-        "yiisoft/csrf": "^3.0@dev",
+        "yiisoft/csrf": "^1.0",
         "yiisoft/data-response": "^3.0@dev",
         "yiisoft/di": "^3.0@dev",
         "yiisoft/factory": "^3.0@dev",
