--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "phan/phan": "^2.4",
-        "phpunit/phpunit": "^9.0",
-        "yiisoft/composer-config-plugin": "dev-master"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -65,8 +64,11 @@
             "dev-master": "1.0.x-dev"
         },
         "config-plugin": {
-            "params": "config/params.php",
-            "web": "config/web.php"
+            "params": "params.php",
+            "web": "web.php"
+        },
+        "config-plugin-options": {
+            "source-directory": "config"
         }
     },
     "config": {
